--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
-Django==5.0.6
-sqlparse==0.5.0
-tzdata==2024.1
+Django==5.1.3
+django-environ==0.11.2
+python-decouple==3.8
+sqlparse==0.5.1
